# torchCpp

./: CMakeLists.txt  ReadMe.md  load_learch_model.py  main.cpp  model.py
include/: learch_model.h
model/: feedforward.pt
